# SparkEngine

./: .gitmodules  CMakeLists.txt  README.md
modules/core/: CMakeLists.txt
modules/core/include/: window.hpp
modules/core/src/: window.cpp
modules/renderer/: CMakeLists.txt
modules/renderer/include/: camera.hpp  mesh.hpp  shader.hpp  texture.hpp
modules/renderer/shaders/: shader.frag  shader.vert
modules/renderer/src/: camera.cpp  mesh.cpp  shader.cpp  texture.cpp
sandbox/: CMakeLists.txt  main.cpp
src/: main.cpp
